$Id$                       -*-text-*-


**** 1.22 [unreleased]

Feature
	Provide rudimentary decode and print for DSO packet.


**** 1.21 Aug 30, 2019

	Fix error report for non-existent or recursive zone file $INCLUDE.

	Emit one deprecation warning on invocation of obsolete method.

	Rework OPT.pm EDNS0 option construction.

	Remove obsolete Net::DNS::RR::DLV package.

	Add Net::DNS::RR::ZONEMD package.

Fix rt.cpan.org #128901

	background TCP query logic expects to read entire response at once


**** 1.20 Mar 22, 2019

	TSIG MAC representation changed to Base64 (align with BIND).

	Update Parameters.pm to resync with IANA registry.

	Refactor resolver test scripts.

	Revise documentation examples to use AAAA instead of A records.

Fix rt.cpan.org #128081

	Recurse.pm fails to resolve domain "kickboxingireland.ie"

Fix rt.cpan.org #127307

	Provide a more informative exception report if application code
	has no "use Net::DNS::SEC" declaration but nevertheless attempts
	to invoke the DNSSEC sign or verify features.


**** 1.19 Nov 14, 2018

	Show structure of EDNS options using Perl-like syntax.

Fix rt.cpan.org #127557

	Net::DNS::Resolver::Base should use 3 args open

Fix rt.cpan.org #127182

	Incorrect logic can cause DNS search to emit fruitless queries.


**** 1.18 Sep 21, 2018

	Documentation revised to remove ambigous use of "answer" which
	has been used to refer to both the answer section of a packet
	and the entire reply packet received from a nameserver.

Fix rt.cpan.org #127018

	Net::DNS::ZoneFile->parse() fails if include directory specified.

Fix rt.cpan.org #127012

	DNS resolution broken when options ndots used in /etc/resolv.conf


**** 1.17 Jul 25, 2018

Fix rt.cpan.org #125890

	AXFR: 1 record per packet responses.

Fix rt.cpan.org #125889

	New NSEC3 for empty non-terminal leaves type bitmap undefined.

Fix rt.cpan.org #125882

	RDATA name compression pointer calculated incorrectly.


**** 1.16 Jul 15, 2018

Feature